kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alphavantage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alphavantage
  template:
    metadata:
      labels:
        app: alphavantage
    spec:
      containers:
      - name: alphavantage
        image: alphavantage
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        tty: true
        stdin: true
