kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: my-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
